Fix bug overflow hidden on all files

--- a/src/css/all-files.css
+++ b/src/css/all-files.css
@@ -1,6 +1,7 @@
 .all-files{
     padding: 1rem;
     max-height: 100%;
+    overflow: hidden;
 }
 .all-files__selector{
     height: 100%;
